# elizoorg_framework

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings23211.json  License.txt  README.md  all.bat  build.bat  clean.bat  rescan.bat  vcpkg.json
DirectXCourseProject/: CMakeLists.txt
DirectXCourseProject/include/: Application.h  Camera.h  DebugRenderSysImpl.h  Delegates.cpp  Delegates.h  DirectionalLight.h  Display.h  Exports.h  GBuffer.h  GameComponent.h  InputDevice.h  Keys.h  LightComponent.h  LightData.h  MathTypes.h  Mesh.h  ModelComponent.h  ModelLoader.h  PlaneComponent.h  SafeRelease.hpp  ShaderManager.h  SimpleMath.h  SphereComponent.h  Transform.h  TriangleComponent.h  VertexPositionColor.h  VertexPositionNormalBinormalTangentColorTex.h  VertexPositionTex.h  pch.h
DirectXCourseProject/src/: Camera.cpp  DebugRenderSysImpl.cpp  Delegates.cpp  DirectionalLight.cpp  Display.cpp  GBuffer.cpp  GameComponent.cpp  InputDevice.cpp  LightComponent.cpp  ModelComponent.cpp  ModelLoader.cpp  PlaneComponent.cpp  ShaderManager.cpp  SimpleMath.cpp  SphereComponent.cpp  TextureLoader.cpp  Transform.cpp  TriangleComponent.cpp  VertexPositionColor.cpp  VertexPositionNormalBinormalTangentColorTex.cpp  VertexPositionTex.cpp
GameApplication/: CMakeLists.txt  GameApplication.cpp  GameApplication.cpp~RF112053b.TMP  GameApplication.h  imgui.ini  main.cpp
GameApplication/Shaders/: CommonShader.hlsl  GBuffer.hlsl  LightVolume.hlsl  MyVeryFirstShader.hlsl  Simple.hlsl  TextureShaderDerref.hlsl  TexturedShader.hlsl  TexturedShaderCSM.hlsl  csm.hlsl
GameApplication/assets/Ara/source/: ara_v2_export2.fbx
GameApplication/assets/Plane/: untitled.mtl
custom-triplets/: x64-windows.txt
